Fix table alignment

--- a/client/src/app/features/training-plans/training-view/training-view.component.scss
+++ b/client/src/app/features/training-plans/training-view/training-view.component.scss
@@ -1,5 +1,5 @@
 table tr td input[type='number'] {
-  text-align: center;
+  text-align: left;
 }
 
 .notes {
@@ -11,8 +11,6 @@ table tr td input[type='number'] {
     margin-top: -3rem;
     padding-bottom: 2rem;
   }
-
-
 
   table td {
     display: grid;
