--- a/client/src/app/shared/components/modal/modal.component.scss
+++ b/client/src/app/shared/components/modal/modal.component.scss
@@ -5,13 +5,14 @@
 }
 
 .modal-body {
-  padding: 0.7rem;
+  padding: 1.325rem;
+  padding-top: 0.25rem;
 }
 
 .modal-header {
-  cursor: move;
   display: flex;
   justify-content: space-between;
+  cursor: move;
 }
 
 @keyframes fadeIn {
